terraform/modules/networking/7-igw.tf
//Create Internet Gateway
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Environment = var.env
  }
}
